fixed email link

--- a/templates/Engineer.html
+++ b/templates/Engineer.html
@@ -13,8 +13,10 @@
         <div class="desc">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: {{id}}</li>
-                <li class="list-group-item">Email: {{email}}</li>
-                <a href="{{github}}">
+                <a href="mailto: {{email}}">
+                <li class="list-group-item">Send Email</li>
+                </a>
+                <a href="https://github.com/{{github}}">
                     <li class="list-group-item">Github</li>
                 </a>
             </ul>
