--- a/templates/Manager.html
+++ b/templates/Manager.html
@@ -13,7 +13,9 @@
         <div class="desc">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: {{id}}</li>
-                <li class="list-group-item">Email: {{email}}</li>
+                <a href="mailto: {{email}}">
+                    <li class="list-group-item">Send Email</li>
+                    </a>
                 <li class="list-group-item">Office: {{officeNumber}}</li>
             </ul>
         </div>
